--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,35 @@ description = ""
 authors = ["tubo213"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8.1,<4.0"
 numpy = "^1.24.3"
 pandas = "^2.0.1"
 matplotlib = "^3.7.1"
 seaborn = "^0.12.2"
 tqdm = "^4.65.0"
 torch = "^2.0.1"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
+black = "^23.3.0"
+flake8 = "^6.0.0"
+isort = "^5.12.0"
+matplotlib = "^3.7.1"
+pytest = "^7.3.1"
+mypy = "^1.3.0"
+
+[tool.black]
+line-length = 150
+include = '\.py$'
+
+[tool.flake8]
+max-line-length = 150
+max-complexity = 20
+ignore = "W293, W503, W504, E402, F401, F403, E203"
+
+[tool.isort]
+profile = "black"
+line_length = 150
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
