--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ seaborn = "^0.12.2"
 tqdm = "^4.65.0"
 torch = "^2.0.1"
 PyYAML = "^6.0"
+types-PyYAML = "^6.0.12"
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
