--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,10 @@ pandas = "^2.0.1"
 matplotlib = "^3.7.1"
 seaborn = "^0.12.2"
 tqdm = "^4.65.0"
-torch = "^2.0.1"
 PyYAML = "^6.0"
 types-PyYAML = "^6.0.12"
+click = "^8.1.3"
+torch = "2.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
