--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ tqdm = "^4.65.0"
 types-PyYAML = "^6.0.12"
 click = "^8.1.3"
 torch = "2.0.0"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
