試行を並列化

--- a/yaml/default.yaml
+++ b/yaml/default.yaml
@@ -1,7 +1,7 @@
-seed: 0
-n_trials: 10
-bs: 1
-step: 500
-n_actions: 50
-dim_context: 10
-dim_action_context: 15
+seed: 0 # random seed
+n_trials: 20 # number of trials
+bs: 1 # batch size
+step: 500 # number of steps
+n_actions: 50 # number of actions(number of arms)
+dim_context: 10 # dimension of context
+dim_action_context: 15 # dimension of action context
