--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ types-PyYAML = "^6.0.12"
 click = "^8.1.3"
 torch = "2.0.0"
 PyYAML = "^6.0"
+joblib = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
