poetryからryeに変更

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,19 +4,24 @@
     "files.trimTrailingWhitespace": true,
     "editor.formatOnSave": true,
     "files.insertFinalNewline": true,
+
+    // black
     "python.formatting.provider": "black",
-    "python.linting.mypyEnabled": true,
+    "python.formatting.blackPath": "${workspaceFolder}/.venv/bin/black",
+
+    // flake8
     "python.linting.lintOnSave": true,
-    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
-    "python.linting.flake8Args": [
-        "--ignore=W293, W503, W504, E402, F401, F403, E203",
-        "--max-line-length=99",
-        "--max-complexity=20"
-    ],
-    "python.formatting.blackArgs": [
-        "--line-length=99",
-    ],
+    "python.linting.flake8Path": "${workspaceFolder}/.venv/bin/pflake8",
+
+    // mypy
+    "python.linting.mypyEnabled": true,
+    "python.linting.mypyPath": "${workspaceFolder}/.venv/bin/mypy",
+
+    // isort
+    "isort.path": ["${workspaceFolder}/.venv/bin/isort"],
     "[python]": {
         "editor.insertSpaces": true,
         "editor.detectIndentation": true,
