--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,45 +1,52 @@
-[tool.poetry]
-name = "bandit"
+[project]
+name = "bandit-algorithms"
 version = "0.1.0"
-description = ""
-authors = ["tubo213"]
+description = "Add a short description here"
+authors = [
+    { name = "tubo213", email = "yuuki.32040808@gmail.com" }
+]
+dependencies = [
+    "numpy>=1.24.4",
+    "matplotlib>=3.7.2",
+    "tqdm>=4.65.0",
+    "click>=8.1.6",
+    "torch>=2.0.1",
+    "joblib>=1.3.1",
+    "pyyaml>=6.0.1",
+]
+readme = "README.md"
+requires-python = ">= 3.8"
 
-packages = [
-    { include = "src"}
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+dev-dependencies = [
+    "black>=23.7.0",
+    "flake8>=5.0.4",
+    "isort>=5.12.0",
+    "mypy>=1.4.1",
+    "jupyter>=1.0.0",
 ]
 
-[tool.poetry.dependencies]
-python = ">=3.8.1,<4.0"
-numpy = "^1.24.3"
-matplotlib = "^3.7.1"
-tqdm = "^4.65.0"
-types-PyYAML = "^6.0.12"
-click = "^8.1.3"
-torch = "2.0.0"
-PyYAML = "^6.0"
-joblib = "^1.2.0"
-
-[tool.poetry.dev-dependencies]
-black = "^23.3.0"
-flake8 = "^6.0.0"
-isort = "^5.12.0"
-matplotlib = "^3.7.1"
-pytest = "^7.3.1"
-mypy = "^1.3.0"
-
 [tool.black]
-line-length = 150
-include = '\.py$'
+line-length = 99
 
 [tool.flake8]
 max-line-length = 99
 max-complexity = 20
-ignore = "W293, W503, W504, E402, F401, F403, E203"
+ignore = [
+    "W293",
+    "W503",
+    "W504",
+    "E402",
+    "F401",
+    "F403",
+    "E203"
+]
 
-[tool.isort]
-profile = "black"
-line_length = 99
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.hatch.metadata]
+allow-direct-references = true
