--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "torch>=2.0.1",
     "joblib>=1.3.1",
     "pyyaml>=6.0.1",
+    "types-PyYAML>=6.0.12.11",
+    "hydra-core>=1.3.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
