--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,12 @@ dependencies = [
     "numpy>=1.24.4",
     "matplotlib>=3.7.2",
     "tqdm>=4.65.0",
-    "click>=8.1.6",
     "torch>=2.0.1",
     "joblib>=1.3.1",
     "pyyaml>=6.0.1",
     "types-PyYAML>=6.0.12.11",
     "hydra-core>=1.3.2",
+    "pytorch_pfn_extras>=0.7.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
