--- a/conf/pbm.yaml
+++ b/conf/pbm.yaml
@@ -2,14 +2,17 @@ hydra:
   job:
     chdir: true
   sweep:
-    dir: outputs/default
+    dir: outputs/pbm
     subdir: ${hydra.job.override_dirname}
 
 seed: 0 # random seed
 n_trials: 20 # number of trials
 bs: 1 # batch size
 step: 500 # number of steps
-n_actions: 50 # number of actions(number of arms)
+n_actions: 10 # number of actions(number of arms)
 dim_context: 10 # dimension of context
 dim_action_context: 15 # dimension of action context
-task_type: "regression" # regression or classification
+examination:
+  - 0.9
+  - 0.3
+  - 0.1
