--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "types-PyYAML>=6.0.12.11",
     "hydra-core>=1.3.2",
     "pytorch_pfn_extras>=0.7.1",
+    "scipy>=1.10.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
